フィールドの項目のタイトルを右寄せにして、強調・色を変更

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -193,3 +193,18 @@ div.detailview-content.container-fluid span.value img {
 [name="existingImages"] img{
   height: auto;
 }
+/* フィールドラベル */
+.detailview-table .fieldLabel{
+    text-align: right;
+}
+.detailview-table .fieldLabel .muted{
+    color: #222;
+    font-weight: bold;
+}
+.summaryView .fieldLabel {
+    text-align: right;
+}
+.summaryView .fieldLabel .muted{
+    color: #222;
+    font-weight: bold;
+}
