#2 スマホ表示時に詳細画面で項目タイトルが右寄せになる不具合の修正
スマホ表示の場合のMedia Queryを追加

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -208,3 +208,11 @@ div.detailview-content.container-fluid span.value img {
     color: #222;
     font-weight: bold;
 }
+@media all and (min-width: 0px) and (max-width: 830px) {
+  .detailview-table .fieldLabel{
+      text-align: left;
+  }
+   .summaryView .fieldLabel {
+      text-align: left;
+  }
+}
