--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -8659,6 +8659,8 @@ body .fc {
     .listViewPageDiv #table-content {
         overflow: scroll !important;
     }
+}
+@media all and (min-width:0px) and (max-width: 767px) {
     #appnavcontent {
         border: 1px solid #ccc;
         background: #f0f0f0;
