--- a/layouts/v7/skins/marketing_and_sales/style.css
+++ b/layouts/v7/skins/marketing_and_sales/style.css
@@ -7719,12 +7719,14 @@ body .fc {
   .listViewPageDiv #table-content {
     overflow: scroll !important;
   }
-  #appnavcontent {
-    border: 1px solid #ccc;
-    background: #f0f0f0;
-    border-width: thin;
-    padding: 30px;
-  }
+}
+@media all and (min-width:0px) and (max-width: 767px) {
+    #appnavcontent {
+        border: 1px solid #ccc;
+        background: #f0f0f0;
+        border-width: thin;
+        padding: 30px;
+    }
 }
 .modules-menu ul li.active a {
   border-left: 3px solid #3CB878;
