#37 システム設定のホーム画面でショートカットや概要の表示が崩れる問題を修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -217,3 +217,10 @@ div.detailview-content.container-fluid span.value img {
       text-align: left;
   }
 }
+.settingsIndexPage .settingsSummary a {
+    margin-bottom: 10px;
+}
+.settingsIndexPage #settingsShortCutsContainer .well {
+  margin-left: 0px;
+  height: 100px;
+}
