#32 関連項目のユーザーは、他のモジュールと同時に設定できないよう制御を追加

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -217,3 +217,10 @@ div.detailview-content.container-fluid span.value img {
       text-align: left;
   }
 }
+/*
+ * カスタム項目編集画面
+ */
+.related_field_caution{
+  margin-top: 10px;
+  float: left;
+}
