#27 レポートでグループ化した際の表示(通常・印刷)を修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -217,3 +217,7 @@ div.detailview-content.container-fluid span.value img {
       text-align: left;
   }
 }
+
+#reportDetails table tr td.summaryHead {
+    border-bottom: 0;
+}
