--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -175,6 +175,29 @@ body > .mCSB_inside > .mCSB_container {
     padding-left: 0;
   }
 }
+@media (min-width: 769px) and (max-width:991px) {
+  .main-container.calendarview .sidebar-essentials {
+    width: 100%;
+    padding-left: 42px;
+  }
+  .main-container.calendarview .content-area {
+    width: 100%;
+    padding-left: 42px;
+  }
+  .main-container.calendarview .module-nav{
+    display: inline-block;
+    width: 42px;
+    z-index: 1093;
+    position: absolute;
+    bottom: 0;        
+    top: 0;
+    left:0;
+    min-height: 100%;
+    background-color: @moduleNav;
+    background: @moduleNav;
+  }
+}
+
 .btn-toolbar > .btn-group:first-child {
   margin-left: 5px;
 }
