--- a/resources/styles.css
+++ b/resources/styles.css
@@ -250,3 +250,10 @@ div.detailview-content.container-fluid span.value img {
   margin-top: 10px;
   float: left;
 }
+/* 詳細検索画面 */
+#advanceSearchButtonRow {
+  text-align: center;
+}
+button#advanceIntiateSave + input {
+  margin-left: 10px;
+}
