#116 概要画面で関連項目を編集する際,ウィンドウの幅が一定の範囲の場合表示が崩れる不具合を修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -251,3 +251,16 @@ div.detailview-content.container-fluid span.value img {
   margin-top: 10px;
   float: left;
 }
+/* 概要画面の関連項目 */
+.summaryView .input-group.editElement {
+  min-width: auto;
+}
+.summaryView .input-group.editElement .referencefield-wrapper {
+  width: 100% ;
+}
+.summaryView .input-group.editElement .referencefield-wrapper .input-group {
+  min-width: auto;
+}
+.summaryView .input-group.editElement .referencefield-wrapper .input-group .inputElement {
+  width: 100% ;
+}
