--- a/resources/styles.css
+++ b/resources/styles.css
@@ -264,3 +264,9 @@ div.detailview-content.container-fluid span.value img {
 .summaryView .input-group.editElement .referencefield-wrapper .input-group .inputElement {
   width: 100% ;
 }
+@media (max-width: 991px) {
+  .main-container-Documents #sidebar-essentials.sidebar-essentials,
+  .main-container-Reports #sidebar-essentials.sidebar-essentials {
+    width: 100%;
+  }
+}
