--- a/resources/styles.css
+++ b/resources/styles.css
@@ -264,3 +264,32 @@ div.detailview-content.container-fluid span.value img {
 .summaryView .input-group.editElement .referencefield-wrapper .input-group .inputElement {
   width: 100% ;
 }
+/**
+ * ドキュメントアップロードモーダル
+ **/
+ @media all and (min-width: 0px) and (max-width: 830px) {
+  .createDocumentContent > table.table > tbody > tr > td,
+  .createDocumentContent > table.table > tbody > tr > th,
+  .createDocumentContent > table.table > tfoot > tr > td,
+  .createDocumentContent > table.table > tfoot > tr > th,
+  .createDocumentContent > table.table > thead > tr > td,
+  .createDocumentContent > table.table > thead > tr > th,
+  .uploadview-content > .uploadcontrols > #upload > table.table > tbody > tr > td,
+  .uploadview-content > .uploadcontrols > #upload > table.table > tbody > tr > th,
+  .uploadview-content > .uploadcontrols > #upload > table.table > tfoot > tr > td,
+  .uploadview-content > .uploadcontrols > #upload > table.table > tfoot > tr > th,
+  .uploadview-content > .uploadcontrols > #upload > table.table > thead > tr > td,
+  .uploadview-content > .uploadcontrols > #upload > table.table > thead > tr > th {
+    display: block;
+    min-width: 100%!important;
+  }
+  .createDocumentContent > table.table td.fieldLabel > label,
+  .uploadview-content > .uploadcontrols > #upload > table.table td.fieldLabel > label {
+    float: left !important;
+  }
+  .createDocumentContent > table.table td.fieldValue .inputElement,
+  .uploadview-content > .uploadcontrols > #upload > table.table td.fieldValue .inputElement {
+    width: 100%;
+    float: none !important;
+  }
+}
