fixed #64 ポータルURLの英語部分が、改行されない不具合の修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -315,3 +315,9 @@ button#advanceIntiateSave + input {
 #sidebar-essentials ul.lists-menu > li:hover  {
     background: #eee;
 }
+/**
+ * portal url表示
+ */
+.portal_url_warp{
+   word-break: break-all;
+}
