設定のユーザー編集の画面幅を小さくした際保存ボタンの隣に余計な隙間がある不具合を修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -300,3 +300,9 @@ button#advanceIntiateSave + input {
     float: none !important;
   }
 }
+/* システム設定画面 */
+@media (max-width: 991px) { 
+.settingsPageDiv .form-horizontal.recordEditView > .modal-overlay-footer {
+    border-left: 0px;
+  }
+}
