fixed #139 CSSのマージを失敗し、MediaQueryのスコープ内に入っていた不具合の修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -311,6 +311,7 @@ button#advanceIntiateSave + input {
 .settingsPageDiv .form-horizontal.recordEditView > .modal-overlay-footer {
     border-left: 0px;
   }
+}
 
 /**
  * アクティブリストとホバー時の背景色指定
