fixed #45 モジュールアイコンのスタイルで、画像のアスペクト比ずれとセンター寄せ対応を実施

--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -647,6 +647,9 @@ a.menu-item:hover {
 .app-menu .app-modules-dropdown .module-icon {
   font-size: 1.2em;
   opacity: 0.2;
+  display: inline-block;
+  width: 23px;
+  text-align: center;
 }
 .app-menu .app-list {
   margin-top: -10px;
