--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -4036,14 +4036,14 @@ th {
 ********************************************/
 .dragdrop-dotted {
   border: 2px dashed #C0C0C0;
-  min-width: 300px;
+  min-width: 265px;
   width: auto;
   color: #C0C0C0;
   text-align: center;
   vertical-align: middle;
   padding-top: 2%;
   margin-bottom: 10px;
-  height: 150px;
+  padding-bottom: 20px;
 }
 .dragdrop-solid {
   border-style: solid;
