--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -8028,3 +8028,12 @@ a.btnReport:hover {
   overflow: auto;
 }
 /*# sourceMappingURL=style.css.map */
+
+/* 右上のメニューが表示されない場合、スマートフォンでヘッダーのスタイルが崩れる不具合修正 */
+@media (max-width: 768px) { 
+  .app-nav .module-action-bar .navbar-right{
+  float: right;
+  height: auto;
+  max-height: 42px;
+  }
+  }
