--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -2414,6 +2414,13 @@ th {
   width: 100%;
   max-width: 325px;
 }
+
+input[type="text"]:read-only {
+  cursor: not-allowed;
+  color: #b3b3b3;
+  background-color: #eeeeee;
+}
+
 .editViewContents .input.form-control:focus,
 .editViewContents .input.form-control:hover,
 .editViewContents .input.form-control:active {
