--- a/resources/styles.css
+++ b/resources/styles.css
@@ -473,3 +473,10 @@ button#advanceIntiateSave + input {
     padding: 0;
   }
 }
+
+/* ユーザー一覧画面のユーザーアイコン */
+.userIconDiv{
+  float: left;
+  width: 30px;
+  padding: 0 26px 0 10px;
+}
