#304 タイトルの長いレコードを、別モジュールの関連から表示した際、「詳細」や「×」ボタンが表示されない不具合を修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -480,3 +480,8 @@ button#advanceIntiateSave + input {
   width: 30px;
   padding: 0 26px 0 10px;
 }
+
+/* 関連モジュールのモーダル */
+.overlayDetail .modal-content {
+  width: 100%;
+}
