--- a/resources/styles.css
+++ b/resources/styles.css
@@ -497,3 +497,28 @@ button#advanceIntiateSave + input {
   margin-top: 10px;
   }
 }
+
+/* 概要画面の関連活動*/
+.activityEntries .relatedActivitiesLabel {
+  color: #222;
+  font-weight: bold;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  text-align: right;
+  width: 90px;
+}
+.activityEntries .relatedActivitiesValue {
+  padding-bottom: 10px;
+  word-break: break-all;
+}
+.activityEntries .summaryViewEntries {
+  display: flex !important;
+  margin-bottom: 10px;
+}
+.activityEntries .summaryViewEntries > a:first-child{
+  font-size: 120%;
+  display: block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
