#228 複数のモジュールで詳細内容が表示されない不具合を修正・CSSを一部修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -502,7 +502,7 @@ button#advanceIntiateSave + input {
 .activityEntries .relatedActivitiesLabel {
   color: #222;
   font-weight: bold;
-  padding-right: 30px;
+  padding-right: 25px;
   padding-bottom: 10px;
   text-align: right;
   width: 90px;
@@ -521,4 +521,5 @@ button#advanceIntiateSave + input {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 60vw;
 }
