fixed #153 2列分の表示項目がセンター寄せされる不具合の修正
かならず内部的にはtd4カラム構成になるように、高さ0のtdを追加する

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -497,3 +497,7 @@ button#advanceIntiateSave + input {
   margin-top: 10px;
   }
 }
+/* 4カラムを維持する為の行を挿入 */
+.firstTr td{
+  padding: 0 !important;
+}
