--- a/resources/styles.css
+++ b/resources/styles.css
@@ -423,8 +423,28 @@ button#advanceIntiateSave + input {
   max-height: 80px;
   margin: 0 auto;
 }
-.detailview-header .col-sm-6 .clearfix .Read_BG_clear{/*背景透明化*/
-  background-color: rgba(0,0,0,0) !important;
+/*レコード画面アイコンの背景白色化と中央寄せ*/
+.detailview-header .col-sm-6 .clearfix .change_BG_white{
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  background-color: white !important;
+}
+/* 製品の場合のみ画像を複数アップロードできる仕様
+ * object-fit:containはIE11で使えないのでbackground-size:containを使って中央寄せする
+*/
+.detailview-header .col-sm-6 .clearfix .change_BG_white .change_BG_center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 /*クイック作成*/
