--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -5276,13 +5276,20 @@ TN-34230 .row .nav > li > a:hover {
   border: 1px solid #CCCCCC;
 }
 .layoutContent .blockFieldsList ul {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: left;
+
   list-style-type: none;
-  float: left;
   min-height: 1px;
   padding: 2px;
-  margin-left: 4%;
   margin-top: 1%;
-  width: 44%;
+}
+.layoutContent .blockFieldsList ul li {
+  width: 44%; /*決め打ち*/
+  margin-left: 4%;
 }
 .layoutContent .blockFieldsList {
   padding: 5px;
