「新しい項目を追加」の箇所も従来と同じ表示になるように修正

--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -5215,7 +5215,6 @@ TN-34230 .row .nav > li > a:hover {
   vertical-align: middle;
 }
 .layoutContent li.dummyRow {
-  border: 1px dotted #DDDDDD;
   min-height: 116px;
   height: auto;
 }
@@ -5279,7 +5278,7 @@ TN-34230 .row .nav > li > a:hover {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: top;
   justify-content: left;
 
   list-style-type: none;
@@ -5288,7 +5287,7 @@ TN-34230 .row .nav > li > a:hover {
   margin-top: 1%;
 }
 .layoutContent .blockFieldsList ul li {
-  width: 44%; /*決め打ち*/
+  width: 44%;
   margin-left: 4%;
 }
 .layoutContent .blockFieldsList {
