#295 製品画像の表示ロジックを変更、スライダーを削除

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -556,3 +556,29 @@ button#advanceIntiateSave + input {
 .firstTr td{
   padding: 0 !important;
 }
+
+/* 製品の商品一覧 */
+ul#productsImageContainer{
+  width: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  list-style: none;
+  flex-wrap: wrap;
+}
+ul#productsImageContainer > li{
+  width: 180px;
+  height: 180px;
+  margin: 10px;
+  overflow: hidden;
+  background-color: #ddd;
+}
+ul#productsImageContainer > li a{
+  cursor: pointer;
+  width: 180px;
+  height: 180px;
+  display: block;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
