#295 製品画像の背景色をなくし、代わりにborder solid 1px #dddを追加

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -571,7 +571,7 @@ ul#productsImageContainer > li{
   height: 180px;
   margin: 10px;
   overflow: hidden;
-  background-color: #ddd;
+  border: solid 1px #ddd;
 }
 ul#productsImageContainer > li a{
   cursor: pointer;
