#417 #418  項目設定画面のスタイルを調整

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -587,3 +587,8 @@ ul#productsImageContainer > li a{
 .layoutContent .blockFieldsList ul li.wideField {
   width: 92%;
 }
+
+/* 項目設定画面の罫線*/
+.layoutContent .blockFieldsList ul li div {
+  height: 100%;
+}
