#138 画面幅が狭いときの一部表示の乱れを修正

--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -2864,6 +2864,10 @@ input[type="text"]:read-only {
   height: auto;
   background: #FBFBFB;
 }
+.header_workflow {
+  white-space: nowrap;
+}aaaaaa
+
 .crumbs {
   height: 40px;
   margin: 0;
