#459 カレンダーの検索欄のスタイルを修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -272,6 +272,9 @@ div.detailview-content.container-fluid span.value img {
 button#advanceIntiateSave + input {
   margin-left: 10px;
 }
+.timepicker-default{
+  border: 1px solid #ccc;
+}
 /* 概要画面の関連項目 */
 .summaryView .input-group.editElement {
   min-width: auto;
