--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -1476,9 +1476,25 @@ ul.unstyled {
   width: 100%;
   border: 1px solid #ddd;
   margin-top: 10px;
-  overflow: scroll;
+  overflow-y: scroll;
+  scrollbar-width: 8px;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
   border-width: thin;
 }
+.table-container-of-translation{
+  height:100%;
+  max-height:70vh;
+}
+.table-container::-webkit-scrollbar {
+  width: 8px;
+}
+.table-container::-webkit-scrollbar-track {
+  background: none;
+}
+.table-container::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #c1c1c1;
+ }
 .listview-table {
   margin-bottom: 0;
   border-top: 0;
