選択肢のバリデーションエラー時の配色がおかしい

--- a/layouts/v7/lib/jquery/select2/select2.css
+++ b/layouts/v7/lib/jquery/select2/select2.css
@@ -330,6 +330,7 @@ Version: 3.4.8 Timestamp: Thu May  1 09:50:32 EDT 2014
     list-style: none;
     display: list-item;
     background-image: none;
+    background-color: #ffffff;
 }
 
 .select2-results li.select2-result-with-children > .select2-result-label {
