--- a/layouts/v7/skins/marketing_and_sales/style.css
+++ b/layouts/v7/skins/marketing_and_sales/style.css
@@ -2858,6 +2858,7 @@ th {
   cursor: pointer;
   position: relative;
   width: 18%;
+  min-width: 100px;
 }
 .crumbs li:first-child {
   border-top: 20px solid #ECECEC;
