--- a/layouts/v7/skins/support/style.css
+++ b/layouts/v7/skins/support/style.css
@@ -2864,6 +2864,7 @@ th {
   cursor: pointer;
   position: relative;
   width: 18%;
+  min-width: 100px;
 }
 .crumbs li:first-child {
   border-top: 20px solid #ECECEC;
