refs #369 タグの所有者をわかるように修正

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -632,3 +632,7 @@ ul#productsImageContainer > li a{
   padding-right: 15px; 
   padding-left: 15px; 
 }
+
+.tag_owner_name p{
+  display: inline;
+}
