#751 画面左上のモジュール表示がずれている

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -367,10 +367,10 @@ body > .mCSB_inside > .mCSB_container{
 
 .active-app-title{
     white-space: nowrap;
-    font-family: Oswald, "OpenSans-Semibold", "Helvetica Neue", Helvetica, sans-serif;
+    font-family: "OpenSans-Semibold", "Helvetica Neue", Helvetica, sans-serif;
 }
 .module-action-bar .module-title{
-    font-family: Oswald,"OpenSans-Semibold", "Helvetica Neue", Helvetica, sans-serif;
+    font-family: "OpenSans-Semibold", "Helvetica Neue", Helvetica, sans-serif;
     color: @blockHeaderFontColor;
     margin: 12px 0;
     white-space: nowrap;
