#801詳細画面にて関連モジュールのアイコンにマウスオーバしても配置が崩れないように修正

--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -7646,6 +7646,8 @@ body .fc {
 }
 .nav-tabs {
   border-bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 .commentcontent {
   border: 1px solid #ddd;
