--- a/layouts/v7/skins/inventory/style.css
+++ b/layouts/v7/skins/inventory/style.css
@@ -7590,6 +7590,8 @@ body .fc {
 }
 .nav-tabs {
   border-bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 .commentcontent {
   border: 1px solid #ddd;
