--- a/layouts/v7/skins/sales/style.css
+++ b/layouts/v7/skins/sales/style.css
@@ -871,6 +871,7 @@ a {
 }
 .emptyField{
   border: none;
+  cursor: default;
 }
 input[type="text"].inputElement,
 input[type="password"].inputElement {
