#872 共有カレンダーの全チェックON/OFF機能の追加

--- a/layouts/v7/skins/marketing/style.css
+++ b/layouts/v7/skins/marketing/style.css
@@ -3917,6 +3917,11 @@ th {
 .calendar-sidebar-tabs .active-link {
   color: white;
 }
+.calendarGroupSelect {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
 .activitytypes .activitytype-indicator {
   padding: 5%;
   margin: 8px;
