--- a/resources/styles.css
+++ b/resources/styles.css
@@ -651,3 +651,26 @@ ul#productsImageContainer > li a{
   flex-wrap: nowrap;
   align-items: center;
 }
+
+/* カレンダーで表示される直前に選択されたレコード一覧 */
+.recent_selected_records_wrap{
+  margin: 5px;
+  display: flex;
+}
+
+.recent_selected_record{
+  margin-right: 10px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.recent_selected_record .module_name{
+  margin: 0;
+  font-size: 10px;
+}
+.recent_selected_record .record_label{
+  margin: 0;
+  font-size: 12px;
+}
