--- a/resources/styles.css
+++ b/resources/styles.css
@@ -651,3 +651,10 @@ ul#productsImageContainer > li a{
   flex-wrap: nowrap;
   align-items: center;
 }
+
+/* レコード編集画面のpadding-leftを可変ではなく固定にする */
+@media (min-width: 992px) {
+  .main-container > .viewContent > .content-area {
+    padding-left: 57px;
+  }
+}
