一覧画面の列幅可変機能の修正

--- a/layouts/v7/lib/jquery/resizableColumns/css/jquery.resizableColumns.css
+++ b/layouts/v7/lib/jquery/resizableColumns/css/jquery.resizableColumns.css
@@ -20,3 +20,7 @@ table.rc-table-resizing thead > th > a {
 .rc-handle:hover {
   background-color:rgb(166, 190, 241);
 }
+/* 検索欄の列幅を調整できないように変更 */
+.rc-handle:first-child {
+  display:none;
+}
