--- a/resources/styles.css
+++ b/resources/styles.css
@@ -102,6 +102,18 @@
 /*
  * モバイル表示
  */
+@media (max-width: 380px) { 
+  .main-container.calendarview {
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 550px) { 
+  .settingsIcon {
+    display: none;
+  }
+}
+
 @media (max-width: 991px) {
   .calendarview {
     padding-bottom: 25px;
@@ -113,7 +125,6 @@
   }
   
   .main-container.calendarview{
-    padding-top: 5px;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column-reverse;
