ディスプレイサイズが推奨の解像度の範囲内にも関わらず文字が見切れる箇所の修正 (#1023)
* ディスプレイサイズが推奨の解像度の範囲内にも関わらず文字が見切れる箇所の修正

* cssの適用範囲を編集画面に限定するためセレクタを変更

---------

Co-authored-by: junmt <12598156+junmt@users.noreply.github.com>

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -695,6 +695,14 @@ ul#productsImageContainer > li a{
   flex-wrap: nowrap;
   align-items: center;
 }
+
+/* レコード編集画面のpadding-leftを可変ではなく固定にする */
+@media (min-width: 992px) {
+  .editViewPageDiv.viewContent > .content-area {
+    padding-left: 57px;
+  }
+}
+
 /* rc-handleと重ならないように調整 */
 .listview-table tr.listViewContentHeader .fa-remove{
   position: relative;
