作成者の上にスペースを入れるように修正しました。

--- a/layouts/v7/lib/jquery/fullcalendar/fullcalendar.css
+++ b/layouts/v7/lib/jquery/fullcalendar/fullcalendar.css
@@ -592,8 +592,8 @@ temporary rendered events).
 	margin-top: -20px;
 }
 
-.description-info {
-    margin-bottom: 20px;
+.calendar-space {
+    margin-top: 20px;
 }
 
 
