--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -938,7 +938,7 @@ a{
     border:1px solid #cccccc;
     border-width: thin;
 }
-.emptyField{
+.blankField{
     border: none;
     cursor: default;
 }
