thinkingreed-inc#883 詳細・編集画面の表示を調整

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -51,6 +51,11 @@ td.listViewEntryValue  .fieldValue .value {
   .listViewPageDiv #table-content.table-container {
     scrollbar-width: none;
   }
+
+  .fieldBlockContainer>table.table:not(#lineItemResult)>tbody>tr>td.blankField,
+  .detailview-table>tbody>tr>td.blankField {
+    display: none;
+  }
 }
 
 /*
