font問題でスクロールバーが表示される環境があるため、修正

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -7298,7 +7298,7 @@ margin-right: 5px;
    .quick-create-module{
     color:black;
     padding: 0 0 0 12px;
-    overflow-x: hidden;
+    overflow: hidden;
     width: 80%;
 	display: inline-block;
     vertical-align: middle;
